--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^2.1.0
   cached_network_image: ^3.2.3
   flutter_launcher_icons: ^0.12.0
-  image_picker: ^0.8.7+5
+  image_picker: ^1.0.7
   path_provider:
   permission_handler: ^10.3.0
   page_transition: ^2.0.9
@@ -53,6 +53,8 @@ dependencies:
   get: ^4.6.6
   url_launcher: ^6.2.5
   smooth_page_indicator: ^1.1.0
+  mobkit_dashed_border: ^0.0.6
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
