--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   flutter_linkify:
   easy_localization: ^3.0.1
   get: ^4.6.6
-  url_launcher: ^6.2.5
+  url_launcher: ^6.2.6
   smooth_page_indicator: ^1.1.0
   mobkit_dashed_border: ^0.0.6
   dropdown_button2: ^2.3.9
@@ -61,6 +61,7 @@ dependencies:
   card_swiper: ^3.0.1
   flutter_screenutil: ^5.9.0
   floating_navbar: ^2.0.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
