--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   flutter_screenutil: ^5.9.0
   floating_navbar: ^2.0.2
   flutter_rating_bar: ^4.0.1
+  flutter_floating_bottom_bar: ^1.2.0
+  floating_bottom_navigation_bar: ^1.5.2
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
