--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_floating_bottom_bar: ^1.2.0
   floating_bottom_navigation_bar: ^1.5.2
   file_picker: ^8.0.3
+  badges: ^2.0.1
 
 dev_dependencies:
   flutter_test:
