--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   floating_bottom_navigation_bar: ^1.5.2
   file_picker: ^8.0.3
   badges: ^2.0.1
+  firebase_messaging: ^14.9.4
+  firebase_core: ^2.29.0
+
 
 dev_dependencies:
   flutter_test:
