--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   badges: ^2.0.1
   firebase_messaging: ^14.9.4
   firebase_core: ^2.29.0
+  fluttertoast: ^8.2.5
 
 
 dev_dependencies:
