--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   firebase_messaging: ^14.9.4
   firebase_core: ^2.29.0
   fluttertoast: ^8.2.5
+  pretty_dio_logger: ^1.2.0-beta-1
+
 
 
 dev_dependencies:
