--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,13 +67,14 @@ dependencies:
   file_picker: ^8.0.3
   badges: ^2.0.1
   firebase_messaging: ^14.9.4
+  firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
   fluttertoast: ^8.2.5
   pretty_dio_logger: ^1.2.0-beta-1
   share_plus: ^9.0.0
   package_info_plus: ^8.0.0
   fl_chart: ^0.68.0
-
+  flutter_pin_code_fields: ^2.2.0
 
 
 dev_dependencies:
