--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,7 @@ dependencies:
   package_info_plus: ^8.0.0
   fl_chart: ^0.68.0
   flutter_pin_code_fields: ^2.2.0
-
-
+  intl_phone_field: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
