--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ dependencies:
   fl_chart: ^0.68.0
   flutter_pin_code_fields: ^2.2.0
   intl_phone_field: ^3.1.0
+  percent_indicator: ^4.2.2
+  youtube_player_flutter: ^8.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
