--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,4 +85,5 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.21"
 }
