--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  wakelock:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.3
   get_it: ^7.6.0
