--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,9 +30,8 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
-
 android {
-    namespace "com.topbusiness.adpayapp"
+    namespace "com.topbusiness.adpayapplication"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -52,7 +51,7 @@ android {
     defaultConfig {
         multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.topbusiness.adpayapp"
+        applicationId "com.topbusiness.adpayapplication"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
